# SudoAir

./: CMakeLists.txt  README.md  main.cpp
controllib/: CMakeLists.txt
controllib/include/controllib/: pid_controller.h
controllib/src/: pid_controller.cpp
quadrotorlib/: CMakeLists.txt
quadrotorlib/include/quadrotorlib/: attitude_controller.h  pid_controller.h  position_controller.h  quadrotor.h
quadrotorlib/src/: attitude_controller.cpp  pid_controller.cpp  position_controller.cpp
